# emv_mini_project

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  build_distribution.py  compose.yaml  distribution.pkl  inference.py  preprocess.py  pyproject.toml  report_content.tex  video_inference.py
Notebooks/: annotate_stamps.py  cap_detection_ml.ipynb  stamp_annotations.json
anomaly/: __init__.py  augment.py  cap_detection.py  detector.py  distribution.py  features.py  io.py  pca.py  preprocess.py
anomaly/tests/: test_distribution.py  test_pca.py
anomaly_detection/: README.md  calibrate.py  calibration.pkl  distribution.pkl  infer.py  live.py
anomaly_detection/Notebooks/: cap_dataset_gen.py  cap_detection_ml.ipynb
anomaly_detection/anomaly/: __init__.py  cap_detection.py  distribution.py  features.py  io.py  pca.py
anomaly_detection/dataset/: README.md  cap_dataset_autogen.py  cap_dataset_gen.py  cap_dataset_gen_v2.py  cap_detection_pipeline.py  metadata.json
anomaly_detection/dataset/dataset/: metadata.json
anomaly_detection/tests/: test_distribution.py  test_pca.py
dataset/anomalies/processed/: metadata.json
lab5/: mnist_inference_camera.py
lab5/mnist_squeeze/: squeezenet1_1.onnx
models/: README.md
report/: IEEE_Tran_Template.tex
research/: annotate_and_erase.py
research/machine_learning/: annotate_and_erase.py  annotate_stamps.py
