[project]
name = "emv-mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "pillow>2.1.1",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "opencv-python-headless",
    "matplotlib",
    "opencv-python>=4.13.0.92",
]
